--- a/src/_colors.css
+++ b/src/_colors.css
@@ -51,7 +51,7 @@
  --white-025: rgba(255,255,255,.025);
  --white-0125: rgba(255,255,255,.0125);
 
-  --dark-red:  #e7040f;
+  /* --dark-red:  #e7040f;
   --red:  #ff4136;
   --light-red:  #ff725c;
   --orange:  #ff6300;
@@ -75,6 +75,6 @@
   --washed-blue:  #f6fffe;
   --washed-green:  #e8fdf5;
   --washed-yellow:  #fffceb;
-  --washed-red:  #ffdfdf;
+  --washed-red:  #ffdfdf; */
 
 }
