--- a/src/_word-break.css
+++ b/src/_word-break.css
@@ -12,7 +12,7 @@
 
 */
 
-.word-normal { word-break: normal; }
+/* .word-normal { word-break: normal; }
 .word-wrap { word-break: break-all; }
 .word-nowrap { word-break: keep-all; }
 
@@ -33,4 +33,4 @@
   .word-wrap-l { word-break: break-all; }
   .word-nowrap-l { word-break: keep-all; }
 }
-
+ */
