--- a/src/_aspect-ratios.css
+++ b/src/_aspect-ratios.css
@@ -17,15 +17,15 @@
  *
  * */
 
-.aspect-ratio {
+/* .aspect-ratio {
   height: 0;
   position: relative;
-}
+} */
 
 .aspect-ratio--16x9 { padding-bottom: 56.25%; }
-.aspect-ratio--9x16 { padding-bottom: 177.77%; }
+/* .aspect-ratio--9x16 { padding-bottom: 177.77%; } */
 
-.aspect-ratio--4x3 {  padding-bottom: 75%; }
+/* .aspect-ratio--4x3 {  padding-bottom: 75%; }
 .aspect-ratio--3x4 {  padding-bottom: 133.33%; }
 
 .aspect-ratio--6x4 {  padding-bottom: 66.6%; }
@@ -37,9 +37,9 @@
 .aspect-ratio--7x5 {  padding-bottom: 71.42%; }
 .aspect-ratio--5x7 {  padding-bottom: 140%; }
 
-.aspect-ratio--1x1 {  padding-bottom: 100%; }
+.aspect-ratio--1x1 {  padding-bottom: 100%; } */
 
-.aspect-ratio--object {
+/* .aspect-ratio--object {
     position: absolute;
     top: 0;
     right: 0;
@@ -48,7 +48,7 @@
     width: 100%;
     height: 100%;
     z-index: 100;
-}
+} */
 
 @media (--breakpoint-not-small){
     .aspect-ratio-ns {
@@ -56,7 +56,7 @@
       position: relative;
     }
     .aspect-ratio--16x9-ns { padding-bottom: 56.25%; }
-    .aspect-ratio--9x16-ns { padding-bottom: 177.77%; }
+    /* .aspect-ratio--9x16-ns { padding-bottom: 177.77%; }
     .aspect-ratio--4x3-ns {  padding-bottom: 75%; }
     .aspect-ratio--3x4-ns {  padding-bottom: 133.33%; }
     .aspect-ratio--6x4-ns {  padding-bottom: 66.6%; }
@@ -65,8 +65,8 @@
     .aspect-ratio--5x8-ns {  padding-bottom: 160%; }
     .aspect-ratio--7x5-ns {  padding-bottom: 71.42%; }
     .aspect-ratio--5x7-ns {  padding-bottom: 140%; }
-    .aspect-ratio--1x1-ns {  padding-bottom: 100%; }
-    .aspect-ratio--object-ns {
+    .aspect-ratio--1x1-ns {  padding-bottom: 100%; } */
+    /* .aspect-ratio--object-ns {
         position: absolute;
         top: 0;
         right: 0;
@@ -75,16 +75,16 @@
         width: 100%;
         height: 100%;
         z-index: 100;
-    }
+    } */
 }
 
 @media (--breakpoint-medium){
-    .aspect-ratio-m {
+    /* .aspect-ratio-m {
       height: 0;
       position: relative;
-    }
+    } */
     .aspect-ratio--16x9-m { padding-bottom: 56.25%; }
-    .aspect-ratio--9x16-m { padding-bottom: 177.77%; }
+    /* .aspect-ratio--9x16-m { padding-bottom: 177.77%; }
     .aspect-ratio--4x3-m {  padding-bottom: 75%; }
     .aspect-ratio--3x4-m {  padding-bottom: 133.33%; }
     .aspect-ratio--6x4-m {  padding-bottom: 66.6%; }
@@ -103,16 +103,16 @@
         width: 100%;
         height: 100%;
         z-index: 100;
-    }
+    } */
 }
 
 @media (--breakpoint-large){
-    .aspect-ratio-l {
+    /* .aspect-ratio-l {
       height: 0;
       position: relative;
-    }
+    } */
     .aspect-ratio--16x9-l { padding-bottom: 56.25%; }
-    .aspect-ratio--9x16-l { padding-bottom: 177.77%; }
+    /* .aspect-ratio--9x16-l { padding-bottom: 177.77%; }
     .aspect-ratio--4x3-l {  padding-bottom: 75%; }
     .aspect-ratio--3x4-l {  padding-bottom: 133.33%; }
     .aspect-ratio--6x4-l {  padding-bottom: 66.6%; }
@@ -131,5 +131,5 @@
         width: 100%;
         height: 100%;
         z-index: 100;
-    }
+    } */
 }
