--- a/src/_background-size.css
+++ b/src/_background-size.css
@@ -15,20 +15,20 @@
   on an html element.
 */
 
-  .cover { background-size: cover!important; }
-  .contain { background-size: contain!important; }
+  .cover { background-size: cover; }
+  .contain { background-size: contain; }
 
 @media (--breakpoint-not-small) {
-  .cover-ns { background-size: cover!important; }
-  .contain-ns { background-size: contain!important; }
+  .cover-ns { background-size: cover; }
+  .contain-ns { background-size: contain; }
 }
 
 @media (--breakpoint-medium) {
-  .cover-m { background-size: cover!important; }
-  .contain-m { background-size: contain!important; }
+  .cover-m { background-size: cover; }
+  .contain-m { background-size: contain; }
 }
 
 @media (--breakpoint-large) {
-  .cover-l { background-size: cover!important; }
-  .contain-l { background-size: contain!important; }
+  .cover-l { background-size: cover; }
+  .contain-l { background-size: contain; }
 }
