--- a/src/_border-radius.css
+++ b/src/_border-radius.css
@@ -27,10 +27,10 @@
   .br0 {        border-radius: 0; }
   .br1 {        border-radius: .125rem; }
   .br2 {        border-radius: .25rem; }
-  .br3 {        border-radius: .5rem; }
-  .br4 {        border-radius: 1rem; }
-  .br-100 {     border-radius: 100%; }
-  .br-pill {    border-radius: 9999px; }
+  /* .br3 {        border-radius: .5rem; }
+  .br4 {        border-radius: 1rem; } */
+  /* .br-100 {     border-radius: 100%; }
+  .br-pill {    border-radius: 9999px; } */
   .br--bottom {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
@@ -52,10 +52,10 @@
   .br0-ns {     border-radius: 0; }
   .br1-ns {     border-radius: .125rem; }
   .br2-ns {     border-radius: .25rem; }
-  .br3-ns {     border-radius: .5rem; }
+  /* .br3-ns {     border-radius: .5rem; }
   .br4-ns {     border-radius: 1rem; }
   .br-100-ns {  border-radius: 100%; }
-  .br-pill-ns { border-radius: 9999px; }
+  .br-pill-ns { border-radius: 9999px; } */
   .br--bottom-ns {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
@@ -78,10 +78,10 @@
   .br0-m {     border-radius: 0; }
   .br1-m {     border-radius: .125rem; }
   .br2-m {     border-radius: .25rem; }
-  .br3-m {     border-radius: .5rem; }
+  /* .br3-m {     border-radius: .5rem; }
   .br4-m {     border-radius: 1rem; }
   .br-100-m {  border-radius: 100%; }
-  .br-pill-m { border-radius: 9999px; }
+  .br-pill-m { border-radius: 9999px; } */
   .br--bottom-m {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
@@ -105,9 +105,9 @@
   .br1-l {     border-radius: .125rem; }
   .br2-l {     border-radius: .25rem; }
   .br3-l {     border-radius: .5rem; }
-  .br4-l {     border-radius: 1rem; }
+  /* .br4-l {     border-radius: 1rem; }
   .br-100-l {  border-radius: 100%; }
-  .br-pill-l { border-radius: 9999px; }
+  .br-pill-l { border-radius: 9999px; } */
   .br--bottom-l {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
