--- a/src/_border-widths.css
+++ b/src/_border-widths.css
@@ -24,9 +24,9 @@
 .bw0 { border-width: 0; }
 .bw1 { border-width: .125rem; }
 .bw2 { border-width: .25rem; }
-.bw3 { border-width: .5rem; }
+/* .bw3 { border-width: .5rem; }
 .bw4 { border-width: 1rem; }
-.bw5 { border-width: 2rem; }
+.bw5 { border-width: 2rem; } */
 
 /* Resets */
 .bt-0 { border-top-width: 0; }
@@ -38,9 +38,9 @@
   .bw0-ns { border-width: 0; }
   .bw1-ns { border-width: .125rem; }
   .bw2-ns { border-width: .25rem; }
-  .bw3-ns { border-width: .5rem; }
+  /* .bw3-ns { border-width: .5rem; }
   .bw4-ns { border-width: 1rem; }
-  .bw5-ns { border-width: 2rem; }
+  .bw5-ns { border-width: 2rem; } */
   .bt-0-ns { border-top-width: 0; }
   .br-0-ns { border-right-width: 0; }
   .bb-0-ns { border-bottom-width: 0; }
@@ -64,9 +64,9 @@
   .bw0-l { border-width: 0; }
   .bw1-l { border-width: .125rem; }
   .bw2-l { border-width: .25rem; }
-  .bw3-l { border-width: .5rem; }
+  /* .bw3-l { border-width: .5rem; }
   .bw4-l { border-width: 1rem; }
-  .bw5-l { border-width: 2rem; }
+  .bw5-l { border-width: 2rem; } */
   .bt-0-l { border-top-width: 0; }
   .br-0-l { border-right-width: 0; }
   .bb-0-l { border-bottom-width: 0; }
