--- a/src/_skins.css
+++ b/src/_skins.css
@@ -24,27 +24,27 @@
 
 .white-90 {         color: var(--white-90); }
 .white-80 {         color: var(--white-80); }
-.white-70 {         color: var(--white-70); }
+/* .white-70 {         color: var(--white-70); }
 .white-60 {         color: var(--white-60); }
-.white-50 {         color: var(--white-50); }
+.white-50 {         color: var(--white-50); } */
 .white-40 {         color: var(--white-40); }
-.white-30 {         color: var(--white-30); }
+/* .white-30 {         color: var(--white-30); } */
 .white-20 {         color: var(--white-20); }
 .white-10 {         color: var(--white-10); }
 
 .black {         color: var(--black); }
-.near-black {    color: var(--near-black); }
+/* .near-black {    color: var(--near-black); } */
 .dark-gray {     color: var(--dark-gray); }
 .mid-gray {      color: var(--mid-gray); }
 .gray {          color: var(--gray); }
-.silver  {       color: var(--silver); }
-.light-silver {  color: var(--light-silver); }
+/* .silver  {       color: var(--silver); } */
+/* .light-silver {  color: var(--light-silver); } */
 .moon-gray {     color: var(--moon-gray); }
 .light-gray {    color: var(--light-gray); }
-.near-white {    color: var(--near-white); }
+/* .near-white {    color: var(--near-white); } */
 .white {         color: var(--white); }
 
-.dark-red { color: var(--dark-red); }
+/* .dark-red { color: var(--dark-red); }
 .red { color: var(--red); }
 .light-red { color: var(--light-red); }
 .orange { color: var(--orange); }
@@ -69,7 +69,7 @@
 .washed-green { color: var(--washed-green); }
 .washed-yellow { color: var(--washed-yellow); }
 .washed-red { color: var(--washed-red); }
-.color-inherit { color: inherit; }
+.color-inherit { color: inherit; } */
 
 
 
@@ -79,36 +79,36 @@
 .bg-black-80 {         background-color: var(--black-80); }
 .bg-black-70 {         background-color: var(--black-70); }
 .bg-black-60 {         background-color: var(--black-60); }
-.bg-black-50 {         background-color: var(--black-50); }
+/* .bg-black-50 {         background-color: var(--black-50); } */
 .bg-black-40 {         background-color: var(--black-40); }
-.bg-black-30 {         background-color: var(--black-30); }
-.bg-black-20 {         background-color: var(--black-20); }
+/* .bg-black-30 {         background-color: var(--black-30); } */
+/* .bg-black-20 {         background-color: var(--black-20); } */
 .bg-black-10 {         background-color: var(--black-10); }
 .bg-black-05 {         background-color: var(--black-05); }
-.bg-white-90 {        background-color: var(--white-90); }
+/* .bg-white-90 {        background-color: var(--white-90); }
 .bg-white-80 {        background-color: var(--white-80); }
-.bg-white-70 {        background-color: var(--white-70); }
+.bg-white-70 {        background-color: var(--white-70); } */
 .bg-white-60 {        background-color: var(--white-60); }
-.bg-white-50 {        background-color: var(--white-50); }
+/* .bg-white-50 {        background-color: var(--white-50); }
 .bg-white-40 {        background-color: var(--white-40); }
-.bg-white-30 {        background-color: var(--white-30); }
+.bg-white-30 {        background-color: var(--white-30); } */
 .bg-white-20 {        background-color: var(--white-20); }
 .bg-white-10 {        background-color: var(--white-10); }
 
 .bg-black {         background-color: var(--black); }
-.bg-near-black {    background-color: var(--near-black); }
+/* .bg-near-black {    background-color: var(--near-black); } */
 .bg-dark-gray {     background-color: var(--dark-gray); }
 .bg-mid-gray {      background-color: var(--mid-gray); }
-.bg-gray {          background-color: var(--gray); }
+/* .bg-gray {          background-color: var(--gray); }
 .bg-silver  {       background-color: var(--silver); }
-.bg-light-silver {  background-color: var(--light-silver); }
+.bg-light-silver {  background-color: var(--light-silver); } */
 .bg-moon-gray {     background-color: var(--moon-gray); }
 .bg-light-gray {    background-color: var(--light-gray); }
-.bg-near-white {    background-color: var(--near-white); }
+/* .bg-near-white {    background-color: var(--near-white); } */
 .bg-white {         background-color: var(--white); }
 .bg-transparent {   background-color: var(--transparent); }
 
-.bg-dark-red { background-color: var(--dark-red); }
+/* .bg-dark-red { background-color: var(--dark-red); }
 .bg-red { background-color: var(--red); }
 .bg-light-red { background-color: var(--light-red); }
 .bg-orange { background-color: var(--orange); }
@@ -133,4 +133,4 @@
 .bg-washed-green { background-color: var(--washed-green); }
 .bg-washed-yellow { background-color: var(--washed-yellow); }
 .bg-washed-red { background-color: var(--washed-red); }
-.bg-inherit { background-color: inherit; }
+.bg-inherit { background-color: inherit; } */
