--- a/src/_visibility.css
+++ b/src/_visibility.css
@@ -16,16 +16,16 @@
 */
 
 .clip {
-  position: fixed !important;
-  _position: absolute !important;
+  position: fixed;
+  _position: absolute;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
 }
 
 @media (--breakpoint-not-small) {
   .clip-ns {
-    position: fixed !important;
-    _position: absolute !important;
+    position: fixed;
+    _position: absolute;
     clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
     clip: rect(1px, 1px, 1px, 1px);
   }
@@ -33,8 +33,8 @@
 
 @media (--breakpoint-medium) {
   .clip-m {
-    position: fixed !important;
-    _position: absolute !important;
+    position: fixed;
+    _position: absolute;
     clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
     clip: rect(1px, 1px, 1px, 1px);
   }
@@ -42,8 +42,8 @@
 
 @media (--breakpoint-large) {
   .clip-l {
-    position: fixed !important;
-    _position: absolute !important;
+    position: fixed;
+    _position: absolute;
     clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
     clip: rect(1px, 1px, 1px, 1px);
   }
