--- a/src/_widths.css
+++ b/src/_widths.css
@@ -64,7 +64,7 @@
 .w-100 { width: 100%; }
 
 .w-third { width: calc(100% / 3); }
-.w-two-thirds { width: calc(100% / 1.5); }
+/* .w-two-thirds { width: calc(100% / 1.5); } */
 .w-auto { width: auto; }
 
 @media (--breakpoint-not-small) {
@@ -88,7 +88,7 @@
   .w-90-ns { width:  90%; }
   .w-100-ns { width: 100%; }
   .w-third-ns { width: calc(100% / 3); }
-  .w-two-thirds-ns { width: calc(100% / 1.5); }
+  /* .w-two-thirds-ns { width: calc(100% / 1.5); } */
   .w-auto-ns { width: auto; }
 }
 
@@ -113,7 +113,7 @@
   .w-90-m { width:  90%; }
   .w-100-m { width: 100%; }
   .w-third-m { width: calc(100% / 3); }
-  .w-two-thirds-m { width: calc(100% / 1.5); }
+  /* .w-two-thirds-m { width: calc(100% / 1.5); } */
   .w-auto-m {    width: auto; }
 }
 
@@ -138,6 +138,6 @@
   .w-90-l {    width:  90%; }
   .w-100-l {   width: 100%; }
   .w-third-l { width: calc(100% / 3); }
-  .w-two-thirds-l { width: calc(100% / 1.5); }
+  /* .w-two-thirds-l { width: calc(100% / 1.5); } */
   .w-auto-l {    width: auto; }
 }
