--- a/src/_z-index.css
+++ b/src/_z-index.css
@@ -43,11 +43,11 @@
 .z-999 { z-index: 999; }
 .z-9999 { z-index: 9999; }
 
-.z-max {
+/* .z-max {
   z-index: 2147483647;
-}
+} */
 
-.z-inherit { z-index: inherit; }
+/* .z-inherit { z-index: inherit; }
 .z-initial { z-index: initial; }
-.z-unset { z-index: unset; }
+.z-unset { z-index: unset; } */
 
