--- a/src/_colors.css
+++ b/src/_colors.css
@@ -51,6 +51,9 @@
  --white-025: rgba(255,255,255,.025);
  --white-0125: rgba(255,255,255,.0125);
 
+ --booking-orange:  #e84c0f;
+ --booking-orange-light: #ff7e00;
+
   /* --dark-red:  #e7040f;
   --red:  #ff4136;
   --light-red:  #ff725c;
