--- a/src/_skins.css
+++ b/src/_skins.css
@@ -108,6 +108,9 @@
 .bg-white {         background-color: var(--white); }
 .bg-transparent {   background-color: var(--transparent); }
 
+.bg-booking-orange-light,
+.bg-booking-orange-light {background-color: var(--booking-orange-light)}
+
 /* .bg-dark-red { background-color: var(--dark-red); }
 .bg-red { background-color: var(--red); }
 .bg-light-red { background-color: var(--light-red); }
